--- a/src/c/assets/css/style.css
+++ b/src/c/assets/css/style.css
@@ -421,7 +421,7 @@ body {
 }
 
 .section-11 {
-	background-color: var(--main-color-1);
+	background-color: #138798;
 }
 
 .section-11 .box:first-child {
