--- a/src/php/assets/css/style.css
+++ b/src/php/assets/css/style.css
@@ -163,6 +163,18 @@ body {
 	font-family: roboto-bold;
 }
 
+@media(max-width: 768px) {
+	.section-4 .section-container {
+		flex-direction: column !important;
+		text-align: center;
+	}
+
+	.section-4 .section-container button {
+		margin: 10px 0px !important;
+	}
+}
+
+
 .section-5 h4 {
 	color: var(--main-color-1);
 }
@@ -281,18 +293,18 @@ body {
 	}
 }
 
-@media (max-width: 920px) {
+@media (max-width: 767px) {
 	.section-6 .left-boxes {
 		flex-basis: 100%;
 		justify-content: center !important;
 	}
 
 	.section-6 .left-boxes .card {
-		flex-basis: 40%;
+		flex-basis: 100%;
 	}
 
 	.section-6 .sidebar {
-		flex-basis: 50%;
+		flex-basis: 90%;
 	}
 }
 
@@ -310,7 +322,7 @@ body {
 
 @media (max-width: 1180px) {
 	.section-7 .box {
-		flex-basis: 45%;
+		flex-basis: 80%;
 	}
 
 	.section-7 img {
@@ -342,10 +354,6 @@ body {
 	color: var(--main-color-1);
 }
 
-.section-9 .carousel {
-	width: 85%;
-}
-
 .section-9 .card {
 	flex-basis: 38%;
 	min-height: 285px;
@@ -363,10 +371,14 @@ body {
 	height: 73px;
 }
 
-@media (max-width: 1150px) {
+@media (max-width: 767px) {
 	.section-9 .card {
 		flex-basis: 70%;
 		min-height: 0px;	
+	}
+
+	.section-9 .card .avt {
+		display: none;
 	}
 }
 
@@ -421,12 +433,27 @@ body {
 	color: var(--main-color-1);
 }
 
+.section-10 .hidden-title {
+	display: none;
+}
+
 @media (max-width: 1150px) {
 	.section-10 .card {
 		flex-basis: 70%;
 		min-height: 0px;	
 	}
 }
+
+@media (max-width: 767px) {
+	.section-10 .card .title {
+		display: none;	
+	}
+
+	.section-10 .card .hidden-title {
+		display: block !important;	
+	}
+}
+
 
 .section-11 {
 	background-image: url(../img/bgg-min.png);
@@ -465,13 +492,21 @@ body {
 	background-color: #F4E11E !important;
 }
 
+.section-11 img {
+	max-width: 100%;
+}
+
+.section-11 .box {
+	max-width: 100% !important;
+}
+
 .form-control {
 	border: none !important;
 }
 
 @media (max-width: 1150px) {
 	.section-11 .box {
-		flex-basis: 100%;
+		flex-basis: 100% !important;
 	}
 }
 
