--- a/src/c/assets/css/style.css
+++ b/src/c/assets/css/style.css
@@ -343,6 +343,11 @@ body {
 	flex-basis: 23%;
 }
 
+.section-8 button {
+	border-radius: 40px !important;
+	background-color: var(--main-color-1);
+}
+
 .section-9 {
 	background-image: url('../img/bg_2-min.png');
 }
