--- a/c/assets/css/style.css
+++ b/c/assets/css/style.css
@@ -56,6 +56,10 @@ body {
 	color: #FFF !important;
 }
 
+.section-banner {
+	padding-top: 82px;
+}
+
 .section-1 h4 {
 	color: var(--main-color-1) !important;
 }
