--- a/java/assets/css/style.css
+++ b/java/assets/css/style.css
@@ -80,33 +80,20 @@ body {
 	width: 100%;
 	height: 300px;
 }
-.banner-2{
-	height: auto;
-	background-color: #C51D23;
+
+.section-2 {
+	background-color: var(--main-color-1);
+	/* background-size: cover; */
 }
-div.for-who{
-	margin-top: 3rem;
-}
-.banner-2 .content img{
-	height: 100%;
-	width: 13%;
-	margin-top: 10px;
-}
-.banner-2 .content span.text{
-	padding-left: 5.5rem;
-}
-.banner-2 .content{
-	margin-top: 2rem;
-}
-.title-child{
-	color:  white;
-	font-weight: 400;
-	font-size: 30px;
-}
-.text-sm{
-	color: white;
-	font-weight: 10;
-	font-size: 16px;
+
+@media (max-width: 1024px) {
+	.section-2 .sec-2 {
+		flex-direction: column-reverse;
+	}
+
+	.section-2 .who-banner {
+		margin: 0 !important;
+	}
 }
 
 .banner-3 h3 {
