test subiz, fb-mess c

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -69,5 +69,14 @@ footer .row {
 	color: #E2E2E2 !important;
 }
 
+#fb-root > div.fb_dialog{
+	right: initial !important;
+	left: 18pt;
+	z-index: 9999999 !important;
+}
+.fb-customerchat.fb_invisible_flow.fb_iframe_widget iframe {
+	right: initial !important;
+	left: 18pt !important;
+}
 
 
