--- a/c/assets/css/style.css
+++ b/c/assets/css/style.css
@@ -1,26 +1,21 @@
 :root {
-	--main-color-0: #FCB813;
-    --main-color-1: #4e8696;
+	--color-sub: #FCB813;
+    --color-main: #118798;
 }
 
 @font-face {
-  font-family: 'svn-gilroy-regular';
+  font-family: 'font-regular';
   src: url('../fonts/SVN-GILROY REGULAR.OTF');
   font-display: swap;
 }
 @font-face {
-  font-family: 'svn-gilroy-bold';
+  font-family: 'font-bold';
   src: url('../fonts/SVN-GILROY BOLD.OTF');
-  font-display: swap;
-}
-@font-face {
-  font-family: 'svn-gilroy-italic';
-  src: url('../fonts/SVN-GILROY ITALIC.OTF');
   font-display: swap;
 }
 
 * {
-	font-family: 'svn-gilroy-regular';
+	font-family: 'font-regular';
 }
 
 body {
@@ -30,38 +25,33 @@ body {
 }
 
 .text-bold {
-	font-family: 'svn-gilroy-bold' !important;
+	font-family: 'font-bold' !important;
 }
 
-.text-italic {
-	font-family: 'svn-gilroy-italic' !important;
+.text-main {
+	color: var(--color-main);
+}
+
+.bg-main {
+	background-color: var(--color-main) !important;
+}
+
+.flex-basis-40 {
+	flex-basis: 40%;
 }
 
 .navbar-collapse .nav-link {
-	font-family: 'svn-gilroy-bold';
+	font-family: 'font-bold';
 	color: #000;
 }
 
 .regis-btn {
-	background-color: var(--main-color-0);
 	color: #000;
 	border-radius: 5px;
 }
 
-.regis-btn:hover {
-	background-color: #DDA211 !important;
-}
-
-.btn:hover {
-	color: #FFF !important;
-}
-
 .section-banner {
 	padding-top: 82px;
-}
-
-.section-1 h4 {
-	color: var(--main-color-1) !important;
 }
 
 .section-1 iframe, .section-1 .left-side {
@@ -78,7 +68,7 @@ body {
 }
 
 .section-1 .left-side p {
-	border: 2px solid var(--main-color-1);
+	border: 2px solid var(--color-main);
 }
 
 @media (max-width: 1050px) {
@@ -92,284 +82,197 @@ body {
 	}
 }
 
-.section-3 h4 {
-	color: var(--main-color-1);
+.section-2 {
+	background: url('../img/section2bg-min.png');
+	background-size: cover;
 }
 
-.section-3 .box {
+@media (max-width: 1024px) {
+	.section-2 .sec-2 {
+		flex-direction: column-reverse;
+	}
+}
+
+@media (max-width: 414px) {
+	.section-2 .box {
+		flex-direction: column !important;
+		text-align: center;
+		justify-content: center;
+	}
+}
+
+@media(max-width: 768px) {
+	.section-3 .wrapper {
+		flex-direction: column-reverse;
+	}
+}
+
+@media(max-width: 767px) {
+	.section-4 .box:nth-child(2n) {
+		justify-content: flex-end !important;
+	}
+
+	.section-4 .box:nth-child(2n+1) {
+		justify-content: flex-start !important;
+	}
+}
+
+.section-5 .box {
 	flex-basis: 25%;
 	padding: 20px !important;
 	text-align: center;
 }
 
-.section-3 .box .img-container {
+.section-5 .box .img-container {
 	margin: 0px auto;
 	height: 90px;
 	width: 90px;
 	border-radius: 50%;
-	background-color: var(--main-color-0);
+	background-color: var(--color-sub);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
-.section-3 .box img {
+.section-5 .box img {
 	height: 55%;
 }
 
-.section-3 .box p {
+.section-5 .box p {
 	font-size: 15px;
 }
 
 @media (max-width: 1050px) {
-	.section-3 .box {
+	.section-5 .box {
 		flex-basis: 80%;
 	}
 }
 
-.section-4 .section-container {
-	background-color: var(--main-color-1);
+.section-6 .section-container {
+	background-color: var(--color-main);
 }
 
-.section-4  h5 {
+.section-6  h5 {
 	flex-basis: 45%;
 }
 
-.section-4 button {
-	background-color: var(--main-color-0) !important;
+.section-6 button {
+	background-color: var(--color-sub) !important;
 	height: 45px;
 }
 
-.section-4 button:hover {
-	color: #FFF !important;
-	background-color: #DDA211 !important;
-}
-
-.section-4 .collapse {
+.section-6 .collapse {
 	background-color: #F9FAF8;
 }
 
-.section-4 table {
+.section-6 table {
 	max-width: 80%;
 	background-color: #F9FAF8;
 }
 
-.section-4 table td {
-	border-top: 2px solid var(--main-color-1);
+.section-6 table td {
+	border-top: 2px solid var(--color-main);
 }
 
-.section-4 table td.focused {
+.section-6 table td.focused {
 	background-color: #E6E6E6;
 }
 
-.section-4 table tr.title-tr {
-	background-color: var(--main-color-1);
+.section-6 table tr.title-tr {
+	background-color: var(--color-main);
 	color: #fff;
 }
 
 @media(max-width: 768px) {
-	.section-4 .section-container {
+	.section-6 .section-container {
 		flex-direction: column !important;
 		text-align: center;
 	}
 
-	.section-4 .section-container button {
+	.section-6 .section-container button {
 		margin: 10px 0px !important;
 	}
 }
 
-.section-5 .box {
-	background-color: var(--main-color-1);
+.section-7 .box {
+	background-color: var(--color-main);
 	opacity: 0.9;
 	flex-basis: 45%;
 	padding: 40px;
 }
 
-.section-5 ul {
+.section-7 ul {
 	list-style-image: url('../img/v-list.png');
 	color: #FFF;
 }
 
 @media(max-width: 768px) {
-	.section-5 .box {
+	.section-7 .box {
 		flex-basis: 90%;
 	}
 }
 
-.detail-layer {
-	transition: 0.5s;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-	background-color: var(--main-color-1);
-	z-index: 10;
-	opacity: 0;
-	position: absolute;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.section-7 {
+	background-color: rgb(255, 255, 255, 0.2);
 }
 
-.detail-layer:hover {
-	transition: 0.8s;
-	opacity: 0.9
-}
-
-.section-5 .box h6 {
-	color: var(--main-color-1);
-}
-
-.section-5 .box small {
+.section-7 .box small {
 	font-size: 14px;
 }
 
-.section-6 {
-	background-color: #F6F6F6;
-}
-
-.section-6 h4 {
-	color: var(--main-color-1);
-}
-
-.section-6 .left-boxes {
-	flex-basis: 50%;
-}
-
-.section-6 .sidebar {
-	flex-basis: 25%;
-}
-
-.section-6 .left-boxes .card {
-	border-radius: 0px !important;
-	flex-basis: 45%;
-}
-
-.section-6 .left-boxes .card-header  {
-	border-radius: 0px !important;
-	background-color: var(--main-color-1);
-	padding-left: 100px;
-}
-
-.section-6 .left-boxes .card-header .img-container {
-	border-radius: 50%;
-	width: 80px;
-	height: 80px;
-	top: -18px;
-	left: 10px;
-	background-color: #FFF;
-	border: 2px solid var(--main-color-1);
-	overflow: hidden;
-	z-index: 20;
-}
-
-.section-6 .left-boxes .card-body h6 {
-	color: var(--main-color-1);
-}
-
-.section-6 .left-boxes .card-body ul li {
-	list-style: none;
-	font-size: 14px !important;
-}
-
-.section-6 .left-boxes .card-body ul li::before {
-	content: "\25B8";
-	margin-right: 7px;
-}
-
-.section-6 .detail-layer:hover {
-	opacity: 1;
-}
-
-.section-6 .sidebar .title {
-	background-color: var(--main-color-1);
-}
-
-@media (max-width: 1300px) {
-	.section-6 .left-boxes {
-		flex-basis: 60%;
-	}
-
-	.section-6 .left-boxes .card {
-		flex-basis: 40%;
-	}
-}
-
-@media (max-width: 767px) {
-	.section-6 .left-boxes {
-		flex-basis: 100%;
-		justify-content: center !important;
-	}
-
-	.section-6 .left-boxes .card {
-		flex-basis: 100%;
-	}
-
-	.section-6 .sidebar {
-		flex-basis: 90%;
-	}
-}
-
-.section-7 .box {
+.section-8 .box {
 	flex-basis: 17%;
 }
 
-.section-7 .box p {
+.section-8 .box p {
 	color: #1F1F1F;
 }
 
-.section-7 .box a {
-	color: var(--main-color-1);
+.section-8 .box a {
+	color: var(--color-main);
 }
 
 @media (max-width: 1180px) {
-	.section-7 .box {
+	.section-8 .box {
 		flex-basis: 80%;
 	}
 
-	.section-7 img {
+	.section-8 img {
 		display: none;
 	}
 
-	.section-7 video {
+	.section-8 video {
 		display: none;
 	}
 
-	.section-7 iframe {
+	.section-8 iframe {
 		display: none;
 	}
 }
 
-.section-8 h4 {
-	color: var(--main-color-1);
-}
-
-.section-8 .box {
+.section-9 .box {
 	flex-basis: 23%;
 }
 
-.section-8 button {
+.section-9 button {
 	border-radius: 40px !important;
-	background-color: var(--main-color-1);
+	background-color: var(--color-main);
 }
 
-.section-9 {
+.section-10 {
 	background-image: url('../img/bg_2-min.png');
 }
 
-.section-9 h4 {
-	color: var(--main-color-1);
-}
-
-.section-9 .card {
+.section-10 .card {
 	flex-basis: 38%;
 	min-height: 285px;
 }
 
-.section-9 .card label {
-	color: var(--main-color-1);
+.section-10 .card label {
+	color: var(--color-main);
 }
 
-.section-9 .card .avt {
+.section-10 .card .avt {
 	width: 100%;
 	object-fit: cover;
 	border-radius: 50%;
@@ -378,22 +281,22 @@ body {
 }
 
 @media (max-width: 413px) {
-	.section-9 .card .avt {
+	.section-10 .card .avt {
 		display: none;
 	}
 }
 
 @media (max-width: 1150px) {
-	.section-9 .card {
+	.section-10 .card {
 		flex-basis: 70%;
 		min-height: 0px;	
 	}
 
-	.section-9 #carouselQuotesCompaniesPC {
+	.section-10 #carouselQuotesCompaniesPC {
 		display: none !important;
 	}
 
-	.section-9 #carouselQuotesCompaniesMB {
+	.section-10 #carouselQuotesCompaniesMB {
 		display: block !important;
 	}
 }
@@ -406,11 +309,11 @@ body {
 	width: 15px !important;
 	height: 15px !important;
 	border-radius: 50%;
-	background-color: var(--main-color-1);
+	background-color: var(--color-main);
 }
 
 .carousel-control-icon {
-	background-color: var(--main-color-1);
+	background-color: var(--color-main);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -418,7 +321,7 @@ body {
 	border-radius: 50%;
 }
 
-.section-10 .img-container {
+.section-11 .img-container {
 	top: -75px;
 	height: 170px;
 	width: 170px;
@@ -427,88 +330,74 @@ body {
 	background-color: #FFF;
 }
 
-.section-10 .img-container img {
+.section-11 .img-container img {
 	border-radius: 50%;
 	width: 100%;
 	object-fit: cover;
 }
 
-.section-10 .carousel-inner{
+.section-11 .carousel-inner{
 	overflow: visible !important;
 }
 
-.section-10 .card .title {
+.section-11 .card .title {
 	padding-left: 200px;
 }
 
-.section-10 .card {
+.section-11 .card {
 	flex-basis: 37%;
 }
 
-.section-10 .card a {
-	color: var(--main-color-1);
+.section-11 .card a {
+	color: var(--color-main);
 }
 
-.section-10 .hidden-title {
+.section-11 .hidden-title {
 	display: none;
 }
 
 @media (max-width: 1150px) {
-	.section-10 .card {
+	.section-11 .card {
 		flex-basis: 70%;
 		min-height: 0px;	
 	}
 
-	.section-10 #carouselFeelStdPC {
+	.section-11 #carouselFeelStdPC {
 		display: none !important;
 	}
 
-	.section-10 #carouselFeelStdMB {
+	.section-11 #carouselFeelStdMB {
 		display: block !important;
 	}
 }
 
 @media (max-width: 767px) {
-	.section-10 .card .title {
+	.section-11 .card .title {
 		display: none;	
 	}
 
-	.section-10 .card .hidden-title {
+	.section-11 .card .hidden-title {
 		display: block !important;	
 	}
 }
 
-.section-11 {
-	background-color: #138798;
+.section-12 {
+	background-color: #118798;
 }
 
-.section-11 img {
+.section-12 h5 {
+	line-height: 30px;
+}
+
+.section-12 .box {
 	max-width: 100%;
 }
 
-.section-11 .box {
-	max-width: 100%;
+.section-12 .btn {
+	border-radius: 25px !important;
 }
 
-.section-11 .box:first-child {
-	flex-basis: 50%;
-}
-
-.section-11 .box:last-child {
-	flex-basis: 40%;
-}
-
-.section-11 .box ul {
-	list-style-image: url('../img/v-list.png');
-	color: #FFF;
-	text-align: left;
-}
-
-.section-11 .box ul li {
-	padding-top: 10px;
-}
-
-.section-11 .countdown-box {
+.section-12 .countdown-box {
 	background-color: #ab2024;
 	flex-basis: 10%;
 }
@@ -518,27 +407,19 @@ body {
 }
 
 @media (max-width: 1150px) {
-	.section-11 .box {
+	.section-12 .box {
 		flex-basis: 100% !important;
 	}
 }
 
 @media (max-width: 767px) {
-	.section-11 .title-sm {
-		display: block !important;
-	}
-
-	.section-11 .title-lg {
-		display: none !important;
-	}
-
-	.section-11 .countdown-box {
+	.section-12 .countdown-box {
 		flex-basis: 20%;
 	}
 }
 
 @media(max-width: 375px) {
-	.section-11 .countdown-box {
+	.section-12 .countdown-box {
 		flex-basis: 45% !important;
 	}
 }
