--- a/php/assets/css/style.css
+++ b/php/assets/css/style.css
@@ -1,55 +1,62 @@
 :root {
-    --main-color-0: #26DAA3;
-    --main-color-1: #00B880;
+    --color-main: #00b880;
+    --color-sub: #0a629d;
 }
 
 @font-face {
-  font-family: 'roboto-regular';
+  font-family: 'font-regular';
   src: url('../fonts/ROBOTO-REGULAR_0.TTF');
   font-display: swap;
 }
 @font-face {
-  font-family: 'roboto-bold';
+  font-family: 'font-bold';
   src: url('../fonts/ROBOTO-BOLD_0.TTF');
-  font-display: swap;
-}
-@font-face {
-  font-family: 'roboto-italic';
-  src: url('../fonts/ROBOTO-ITALIC.TTF');
   font-display: swap;
 }
 
 * {
-	font-family: 'roboto-regular';
+	font-family: 'font-regular';
 }
 
 body {
-	background: url('../img/Layer_63-min.png') no-repeat center center fixed;
+	background: url('../img/Layer_16-min.png') no-repeat center center fixed;
 	background-size: cover;
 	background-color: #000;
 }
 
 .text-bold {
-	font-family: 'roboto-bold' !important;
+	font-family: 'font-bold' !important;
 }
 
-.text-italic {
-	font-family: 'roboto-italic' !important;
+.text-main {
+	color: var(--color-main) !important;
+}
+
+.bg-main {
+	background-color: var(--color-main) !important;
+}
+
+.bg-sub {
+	background-color: var(--color-sub) !important;
+}
+
+.flex-basis-40 {
+	flex-basis: 40%;
 }
 
 .navbar-collapse .nav-link {
-	font-family: 'roboto-bold';
+	font-family: 'font-bold';
 	color: #000;
 }
 
 .regis-btn {
-	background-color: var(--main-color-0);
+	background-color: var(--color-main);
 	color: #FFF;
 	border-radius: 20px;
 }
 
 .regis-btn:hover {
-	background-color: var(--main-color-1) !important;
+	background-color: var(--color-sub) !important;
 }
 
 .btn:hover {
@@ -58,10 +65,6 @@ body {
 
 .section-banner {
 	padding-top: 82px;
-}
-
-.section-1 h5 {
-	color: var(--main-color-0) !important;
 }
 
 .section-1 iframe, .section-1 ul {
@@ -79,7 +82,7 @@ body {
 
 .section-1 ul li::before {
   content: "\2022";
-  color: var(--main-color-0);
+  color: var(--color-main);
   font-weight: bold;
   display: inline-block; 
   width: 1em;
@@ -96,105 +99,131 @@ body {
 	}
 }
 
-.section-3 {
-	background-color: var(--main-color-1);
+.section-2 {
+	background: url('../img/section2bg-min.png');
+	background-size: cover;
 }
 
-.section-3 .box {
+@media (max-width: 1024px) {
+	.section-2 .sec-2 {
+		flex-direction: column-reverse;
+	}
+}
+
+@media (max-width: 414px) {
+	.section-2 .box {
+		flex-direction: column !important;
+		text-align: center;
+		justify-content: center;
+	}
+}
+
+@media(max-width: 768px) {
+	.section-3 .wrapper {
+		flex-direction: column-reverse;
+	}
+}
+
+@media(max-width: 767px) {
+	.section-4 .box:nth-child(2n) {
+		justify-content: flex-end !important;
+	}
+
+	.section-4 .box:nth-child(2n+1) {
+		justify-content: flex-start !important;
+	}
+}
+
+.section-5 .box {
 	flex-basis: 16%;
 	text-align: center;
 	color: #FFF;
 	padding: 11px !important;
 }
 
-.section-3 .box .img-container {
+.section-5 .box .img-container {
 	margin: 0px auto;
 	height: 90px;
 	width: 90px;
 	border-radius: 50%;
-	background-color: var(--main-color-1);
+	background-color: var(--color-main);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	border: 2px solid #FFF;
 }
 
-.section-3 .box img {
+.section-5 .box img {
 	height: 60%;
 }
 
-.section-3 .box small {
+.section-5 .box small {
 	font-size: 15px;
 }
 
 @media (max-width: 1050px) {
-	.section-3 .box {
+	.section-5 .box {
 		flex-basis: 40%;
 	}
 }
 
-.section-4 .section-container {
+.section-6 .section-container {
 	background-color: #09629C;
 }
 
-.section-4  h5 {
+.section-6  h5 {
 	flex-basis: 40%;
 }
 
-.section-4 button {
+.section-6 button {
 	color: #09629C;
 	height: 45px;
 }
 
-.section-4 button:hover {
+.section-6 button:hover {
 	color: #064168 !important;
 }
 
-.section-4 .collapse {
+.section-6 .collapse {
 	background-color: #EBEBEB;
 }
 
-.section-4 img {
+.section-6 img {
 	max-width: 100%;
 }
 
-.section-4 table {
+.section-6 table {
 	max-width: 80%;
 }
 
-.section-4 table .text-focused {
+.section-6 table .text-focused {
 	color: #0a629d;
-	font-family: roboto-bold;
+	font-family: font-bold;
 }
 
 @media(max-width: 768px) {
-	.section-4 .section-container {
+	.section-6 .section-container {
 		flex-direction: column !important;
 		text-align: center;
 	}
 
-	.section-4 .section-container button {
+	.section-6 .section-container button {
 		margin: 10px 0px !important;
 	}
 }
 
-
-.section-5 h4 {
-	color: var(--main-color-1);
-}
-
-.section-5 h6 {
+.section-7 h6 {
 	padding: 0px 22%;
 	color: #333333;
 }
 
-.section-5 .box {
+.section-7 .box {
 	flex-basis: 18%;
 	border: 1px solid #CACACA;
 }
 
 @media (max-width: 830px) {
-	.section-5 .box {
+	.section-7 .box {
 		flex-basis: 45%;
 	}
 }
@@ -204,7 +233,7 @@ body {
 	top: 0px;
 	width: 100%;
 	height: 100%;
-	background-color: var(--main-color-1);
+	background-color: var(--color-main);
 	z-index: 10;
 	opacity: 0;
 	position: absolute;
@@ -218,161 +247,132 @@ body {
 	opacity: 0.9
 }
 
-.section-5 .box h6 {
-	color: var(--main-color-1);
+.section-7 .box small {
+	font-size: 0.9rem;
 }
 
-.section-5 .box small {
-	font-size: 14px;
-}
-
-.section-6 {
+.section-8 {
 	background-color: #F6F6F6;
 }
 
-.section-6 h4 {
-	color: var(--main-color-1);
-}
-
-.section-6 .left-boxes {
+.section-8 .left-boxes {
 	flex-basis: 50%;
 }
 
-.section-6 .sidebar {
+.section-8 .sidebar {
 	flex-basis: 25%;
 }
 
-.section-6 .left-boxes .card {
+.section-8 .left-boxes .card {
 	border-radius: 0px !important;
 	flex-basis: 45%;
 }
 
-.section-6 .left-boxes .card-header  {
+.section-8 .left-boxes .card-header  {
 	border-radius: 0px !important;
-	background-color: var(--main-color-1);
+	background-color: var(--color-main);
 	padding-left: 100px;
 }
 
-.section-6 .left-boxes .card-header .img-container {
+.section-8 .left-boxes .card-header .img-container {
 	border-radius: 50%;
 	width: 80px;
 	height: 80px;
 	top: -18px;
 	left: 10px;
 	background-color: #FFF;
-	border: 2px solid var(--main-color-1);
+	border: 2px solid var(--color-main);
 	overflow: hidden;
 	z-index: 20;
 }
 
-.section-6 .left-boxes .card-body h6 {
-	color: var(--main-color-1);
-}
-
-.section-6 .left-boxes .card-body ul li {
+.section-8 .left-boxes .card-body ul li {
 	list-style: none;
 	font-size: 14px !important;
 }
 
-.section-6 .left-boxes .card-body ul li::before {
+.section-8 .left-boxes .card-body ul li::before {
 	content: "\25B8";
 	margin-right: 7px;
 }
 
-.section-6 .detail-layer:hover {
+.section-8 .detail-layer:hover {
 	opacity: 1;
 }
 
-.section-6 .sidebar .title {
-	background-color: var(--main-color-1);
+.section-8 .sidebar .title {
+	background-color: var(--color-main);
 }
 
 @media (max-width: 1300px) {
-	.section-6 .left-boxes {
+	.section-8 .left-boxes {
 		flex-basis: 60%;
 	}
 
-	.section-6 .left-boxes .card {
+	.section-8 .left-boxes .card {
 		flex-basis: 40%;
 	}
 }
 
 @media (max-width: 767px) {
-	.section-6 .left-boxes {
+	.section-8 .left-boxes {
 		flex-basis: 100%;
 		justify-content: center !important;
 	}
 
-	.section-6 .left-boxes .card {
+	.section-8 .left-boxes .card {
 		flex-basis: 100%;
 	}
 
-	.section-6 .sidebar {
+	.section-8 .sidebar {
 		flex-basis: 90%;
 	}
 }
 
-.section-7 .box {
+.section-9 .box {
 	flex-basis: 17%;
 }
 
-.section-7 .box p {
+.section-9 .box p {
 	color: #1F1F1F;
 }
 
-.section-7 .box a {
-	color: var(--main-color-1);
+.section-9 .box a {
+	color: var(--color-sub);
 }
 
 @media (max-width: 1180px) {
-	.section-7 .box {
+	.section-9 .box {
 		flex-basis: 80%;
 	}
 
-	.section-7 img {
+	.section-9 img {
 		display: none;
 	}
 
-	.section-7 video {
+	.section-9 video {
 		display: none;
 	}
 
-	.section-7 iframe {
+	.section-9 iframe {
 		display: none;
 	}
 }
 
-.section-8 h4 {
-	color: var(--main-color-1);
-}
-
-.section-8 .box {
+.section-10 .box {
 	flex-basis: 23%;
 }
 
-.section-8 button {
-	border-radius: 40px !important;
-	background-color: var(--main-color-1);
-}
-
-.section-9 {
+.section-11 {
 	background-image: url('../img/bg_2-min.png');
 }
 
-.section-9 h4 {
-	color: var(--main-color-1);
-}
-
-.section-9 .card {
+.section-11 .card {
 	flex-basis: 38%;
 	min-height: 285px;
 }
 
-.section-9 .card label {
-	color: var(--main-color-1);
-}
-
-.section-9 .card .avt {
+.section-11 .card .avt {
 	width: 100%;
 	object-fit: cover;
 	border-radius: 50%;
@@ -381,22 +381,22 @@ body {
 }
 
 @media (max-width: 413px) {
-	.section-9 .card .avt {
+	.section-11 .card .avt {
 		display: none;
 	}
 }
 
 @media (max-width: 1150px) {
-	.section-9 .card {
+	.section-11 .card {
 		flex-basis: 70%;
 		min-height: 0px;	
 	}
 
-	.section-9 #carouselQuotesCompaniesPC {
+	.section-11 #carouselQuotesCompaniesPC {
 		display: none !important;
 	}
 
-	.section-9 #carouselQuotesCompaniesMB {
+	.section-11 #carouselQuotesCompaniesMB {
 		display: block !important;
 	}
 }
@@ -409,11 +409,11 @@ body {
 	width: 15px !important;
 	height: 15px !important;
 	border-radius: 50%;
-	background-color: var(--main-color-1);
+	background-color: var(--color-main);
 }
 
 .carousel-control-icon {
-	background-color: var(--main-color-1);
+	background-color: var(--color-main);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -421,7 +421,7 @@ body {
 	border-radius: 50%;
 }
 
-.section-10 .img-container {
+.section-12 .img-container {
 	top: -75px;
 	height: 170px;
 	width: 170px;
@@ -430,101 +430,72 @@ body {
 	background-color: #FFF;
 }
 
-.section-10 .img-container img {
+.section-12 .img-container img {
 	border-radius: 50%;
 	width: 100%;
 	object-fit: cover;
 }
 
-.section-10 .carousel-inner{
+.section-12 .carousel-inner{
 	overflow: visible !important;
 }
 
-.section-10 .card .title {
+.section-12 .card .title {
 	padding-left: 200px;
 }
 
-.section-10 .card {
+.section-12 .card {
 	flex-basis: 37%;
 }
 
-.section-10 .card a {
-	color: var(--main-color-1);
-}
-
-.section-10 .hidden-title {
+.section-12 .hidden-title {
 	display: none;
 }
 
 @media (max-width: 1150px) {
-	.section-10 .card {
+	.section-12 .card {
 		flex-basis: 70%;
 		min-height: 0px;	
 	}
 
-	.section-10 #carouselFeelStdPC {
+	.section-12 #carouselFeelStdPC {
 		display: none !important;
 	}
 
-	.section-10 #carouselFeelStdMB {
+	.section-12 #carouselFeelStdMB {
 		display: block !important;
 	}
 }
 
 @media (max-width: 767px) {
-	.section-10 .card .title {
+	.section-12 .card .title {
 		display: none;	
 	}
 
-	.section-10 .card .hidden-title {
+	.section-12 .card .hidden-title {
 		display: block !important;	
 	}
 }
 
-
-.section-11 {
-	background-image: url(../img/bgg-min.png);
-	background-color: #00B880;
+.section-13 {
+	background-color: var(--color-main);
 }
 
-.section-11 .box:first-child {
-	flex-basis: 50%;
+.section-13 h5 {
+	line-height: 30px;
 }
 
-.section-11 .box:last-child {
-	flex-basis: 40%;
-}
-
-.section-11 .box ul {
-	list-style-image: url('../img/v-list.png');
-	color: #FFF;
-	text-align: left;
-}
-
-.section-11 .box ul li {
-	padding-top: 10px;
-}
-
-.section-11 form button {
-	color: #0a629d;
-	border-radius: 25px;
-}
-
-.section-11 .countdown-box {
-	background-color: #0a629d;
-	flex-basis: 10%;
-}
-
-.section-11 .btn-warning {
-	background-color: #F4E11E !important;
-}
-
-.section-11 img {
+.section-13 .box {
 	max-width: 100%;
 }
 
-.section-11 .box {
-	max-width: 100% !important;
+.section-13 .btn {
+	border-radius: 25px !important;
+}
+
+.section-13 .countdown-box {
+	background-color: var(--color-sub);
+	flex-basis: 17%;
 }
 
 .form-control {
@@ -532,35 +503,23 @@ body {
 }
 
 @media (max-width: 1150px) {
-	.section-11 .box {
+	.section-13 .box {
 		flex-basis: 100% !important;
 	}
 }
 
 @media (max-width: 767px) {
-	.section-11 .title-sm {
-		display: block !important;
-	}
-
-	.section-11 .title-lg {
-		display: none !important;
-	}
-
-	.section-11 .countdown-box {
+	.section-13 .countdown-box {
 		flex-basis: 20%;
 	}
 }
 
 @media(max-width: 375px) {
-	.section-11 .countdown-box {
+	.section-13 .countdown-box {
 		flex-basis: 45% !important;
 	}
 }
 
-.section-12 h4 {
-	color: var(--main-color-1);
-}
-
-.section-12 .fb-comments iframe {
+.section-14 .fb-comments iframe {
 	width: 100% !important;
 }
