--- a/c/assets/css/style.css
+++ b/c/assets/css/style.css
@@ -18,12 +18,6 @@
 	font-family: 'font-regular';
 }
 
-body {
-	background: url('../img/Layer_16-min.png') no-repeat center center fixed;
-	background-size: cover;
-	background-color: #000;
-}
-
 .text-bold {
 	font-family: 'font-bold' !important;
 }
@@ -93,11 +87,15 @@ body {
 	}
 }
 
-@media (max-width: 414px) {
+@media (max-width: 768px) {
 	.section-2 .box {
-		flex-direction: column !important;
 		text-align: center;
 		justify-content: center;
+		align-items: center !important;
+	}
+
+	.section-2 .box img {
+		padding: 0 !important;
 	}
 }
 
@@ -194,6 +192,11 @@ body {
 	}
 }
 
+.section-7 {
+	background: url('../img/bg_48-min.png') no-repeat center center fixed;
+	background-size: cover;
+}
+
 .section-7 .box {
 	background-color: var(--color-main);
 	opacity: 0.9;
@@ -212,12 +215,13 @@ body {
 	}
 }
 
-.section-7 {
-	background-color: rgb(255, 255, 255, 0.2);
-}
-
 .section-7 .box small {
 	font-size: 0.9rem;
+}
+
+.section-8 {
+	background: url('../img/bg_58-min.png') no-repeat center center fixed;
+	background-size: cover;
 }
 
 .section-8 .box {
@@ -254,9 +258,8 @@ body {
 	flex-basis: 23%;
 }
 
-.section-9 button {
+.section-9 a {
 	border-radius: 40px !important;
-	background-color: var(--color-main);
 }
 
 .section-10 {
@@ -350,6 +353,10 @@ body {
 
 .section-11 .card a {
 	color: var(--color-main);
+}
+
+.section-11 .card-body {
+	background-color: #f0f0f0;
 }
 
 .section-11 .hidden-title {
